Add csrf for doughnut page.

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -75,6 +75,8 @@ jQuery( document ).ready( function() {
 
 <div id="dashboardListContainer" class="horizontalMenu">
     <div id="dashboardListWrapper" class="dashboardList">
+        <ul id="dashboardList">
+        </ul>
         <ul id="dashboardList"></ul>
     </div>
 </div>
